--- a/src/style/about.css
+++ b/src/style/about.css
@@ -14,22 +14,24 @@
 }
 
 .abouts-section h1 {
-  color: #2b6a9e;
+  color: #082ed4;
   text-align: center;
   text-transform: uppercase;
   text-underline-offset: lighter;
 }
 
 .abouts-section h2 {
-  font-size: 36px;
+  font-size: 28px;
+  color: #333;
   padding-top: 20px;
   font-weight: 700;
   line-height: 46px;
 }
 
 .abouts-section p {
-  font-size: 18px;
+  font-size: 17px;
   text-align: start;
+  font-family: 'Gill Sans';
   padding-top: 20px;
 
 }
@@ -118,7 +120,7 @@
 .client-count h2 {
   font-size: 40px;
   font-weight: bold;
-  color: #2b6a9e;
+  color: #0056b3;
   margin-bottom: 10px;
 }
 
@@ -127,7 +129,7 @@
   font-size: 20px;
   font-weight: bold;
   margin-top: 10px;
-  color: #2b6a9e;
+  color: #0056b3;
 }
 
 .pro-header {
@@ -137,7 +139,7 @@
 
 .pro-header span {
   font-size: 18px;
-  color: #2b6a9e;
+  color: #0056b3;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -180,7 +182,7 @@
 
 .process-step svg {
   font-size: 50px;
-  color: #2b6a9e;
+  color: #0056b3;
   margin-bottom: 10px;
 }
 
@@ -209,7 +211,7 @@
 }
 
 .connects span {
-  color: #2b6a9e;
+  color: #0056b3;
 }
 
 .sub-container {
@@ -289,7 +291,7 @@
   font-size: 2rem; 
   height: 60px;
   width: 60px; 
-  color: #1a5d8e; 
+  color: #0056b3;
   background-color: #fff; 
   border-radius: 50%; 
   display: flex; 
