--- a/src/style/company.css
+++ b/src/style/company.css
@@ -1,4 +1,3 @@
-
 .missions-card {
   width: 1000px;
   display: flex;
@@ -23,23 +22,28 @@
   object-fit: cover;
 }
 
-.mission-content, .vision-content, .value-content {
+.mission-content,
+.vision-content,
+.value-content {
   margin-bottom: 20px;
 }
-.mission-content p, .vision-content p {
-    font-size: 18px;
-    line-height: 1.6;
-    color: black;
-    margin: 10px 0;
-  }
-  
-  .value-content ul {
-  
+
+.mission-content p,
+.vision-content p {
+  font-size: 18px;
+  line-height: 1.6;
+  color: black;
+  margin: 10px 0;
+}
+
+.value-content ul {
+
   font-size: 18px;
   margin-bottom: 10px;
 }
 
-.mission-content p, .vision-content p {
+.mission-content p,
+.vision-content p {
   font-size: 18px;
   line-height: 1.6;
   color: black;
@@ -63,13 +67,14 @@
   margin: 50px;
   display: flex;
   overflow: hidden;
- 
+
 }
-.career-image{
-    width: 120%;
-    height: 70%;
-    margin:10px;
-    margin-top: 90px;
+
+.career-image {
+  width: 120%;
+  height: 70%;
+  margin: 10px;
+  margin-top: 90px;
 }
 
 .career-contain {
@@ -91,8 +96,9 @@
 .career-contents span {
   color: #2b6a9e;
 }
-.career-contents p{
-    margin-top: 10px;
+
+.career-contents p {
+  margin-top: 10px;
 }
 
 .ca-icon {
@@ -100,6 +106,7 @@
   font-size: 70px;
   flex: 1;
 }
+
 .careers-text {
   flex: 2;
   top: 0;
@@ -114,17 +121,20 @@
   margin-bottom: 20px;
   margin-top: 20px;
 }
+
 .hire-process {
   text-align: center;
   margin-bottom: 30px;
   margin-top: 10px;
 }
+
 .hire-process h2 {
   font-size: 36px;
   color: #333;
   font-weight: bold;
   margin-top: 10px;
 }
+
 .hire-steps {
   display: flex;
   flex-wrap: wrap;
@@ -147,32 +157,31 @@
 
 }
 
-.hire-step:hover{
-    cursor: pointer;
-    background-color: #86aecf;
+.hire-step:hover {
+  cursor: pointer;
+  background-color: #86aecf;
 }
 
-.hire-step p{
-    font-weight: 400;
+.hire-step p {
+  font-weight: 400;
 }
 
-.h-icon{
+.h-icon {
   color: #2b6a9e;
   font-size: 40px;
 }
 
 /*faq page*/
-
-
 .fa-section {
   text-align: center;
   margin-bottom: 30px;
   margin-top: 10px;
 }
-.fa-section h3{
+
+.fa-section h3 {
   color: #2b6a9e;
 }
-    
+
 .fa-section h2 {
   font-size: 36px;
   color: #333;
@@ -214,7 +223,7 @@
   margin-bottom: 10px;
 }
 
-.faq-step h3 {  
+.faq-step h3 {
   margin: 0;
   color: #333;
 }
@@ -222,4 +231,4 @@
 .faq-step p {
   margin-top: 10px;
   color: #555;
-}               
+}
